--- a/analyze apply extend-2/extend/extend04.html
+++ b/analyze apply extend-2/extend/extend04.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- 	
-	Student Name: 
-	File Name: 
-	Date: 
+	Student Name: Brandon Melendez
+	File Name: extend04.html
+	Date: 2/26/24
 -->
 <html lang="en">
 <head>
